# alpaca-ripper

./: Cargo.toml  README.md
src/: alpaca.rs  main.rs  options.rs
src/alpaca/: client.rs  trade.rs  types.rs
src/alpaca/market/: bar.rs
src/alpaca/trade/: account.rs  asset.rs  client.rs  trade_client.rs
src/options/: credentials.rs  get_credentials.rs
